# mars

./: Cargo.toml  README.md
resources/: index_data.parquet  stock_data.parquet
src/: lib.rs  prelude.rs
src/crafter/: dtypes.rs  mod.rs
src/crafter/nodes/: backtest.rs  data.rs  fit.rs  math.rs  mod.rs  utils.rs
src/data_pipelines/yfinance/: download.py
src/examples/: mod.rs  return_model.rs
src/flatten/: flat.rs  mod.rs
tests/crafter/: nodes.rs
