[package]
name = "mars"
version = "0.1.0"
edition = "2024"


[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
polars = { version = "0.49.1", features = ["lazy", "temporal", "describe", "json", "parquet", "dtype-datetime", "sql"] }
serde = "1.0.219"
serde_json = "1.0.141"
typetag = "0.2.20"

[profile.dev]
incremental = true

[profile.test]
incremental = true

